k8s/service2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: service2
  template:
    metadata:
      labels:
        component: service2
    spec:
      containers:
        - name: service2
          image: karlobencic/service2:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
