k8s/service1-cluster-service-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: service1
  ports:
    - port: 8080
      targetPort: 8080
