k8s/service2-cluster-service-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: service2
  ports:
    - port: 8081
      targetPort: 8080
